--- a/Lectures/Week06_ANOVAII_lecture.Rmd
+++ b/Lectures/Week06_ANOVAII_lecture.Rmd
@@ -354,7 +354,7 @@ class: inverse, middle, center
 
 .pull-right[
 
-```{r, echo = F, fig.height=3}
+```{r, echo = F, fig.height=3.5}
 facDat <- read.csv('https://mtruelovehill.github.io/PRM/Data/petDat.csv')
 
 ggplot(facDat, aes(Pet, SWB, fill = Personality)) + geom_boxplot() +
@@ -363,7 +363,7 @@ ggplot(facDat, aes(Pet, SWB, fill = Personality)) + geom_boxplot() +
   theme(axis.text = element_text(size = 12),
         axis.title = element_text(size = 14, face = 'bold'),
         legend.position = 'inside',
-        legend.position.inside = c(.1, .15))
+        legend.position.inside = c(.35, .2))
 
 ```
 
@@ -422,8 +422,6 @@ knitr::include_graphics('images/factorialSS.png')
 ---
 ### The Logic Behind Factorial ANOVA
 
-+ Calculating $SS_{model}$ - the variance in the DV explained by the IV
-
 .pull-left[
 Recall from last week that $SS_{model}$ is calculated as the distance between the means of each group and the grand mean. 
 
@@ -465,46 +463,72 @@ basePlot + geom_point(data = dat, aes(color = IV)) +
 --
 
 .pull-right[
-When there are multiple IVs, $SS_{model}$ is calculated as the distance between the means of **each independent group** and the grand mean. 
+When there are multiple IVs, $SS_{model}$ is still calculated as the distance between the means of each group and the grand mean. 
 
-With 2 IVs (one with 2 levels and one with 3), we have $2\times3 = 6$ possible groups, so $SS_{model}$ is computed from these:
+With 2 IVs (one with 2 levels and one with 3), there are 6 possible groups, so $SS_{model}$ is computed from these:
 
-```{r, echo = F, fig.height=4, warning = F}
+```{r, echo = F, fig.height=4.5, warning = F}
 sampDat <- read.csv('https://mtruelovehill.github.io/PRM/Data/petSampleDat.csv')
 sampDat$Group <- paste(sampDat$Pet, sampDat$Personality, sep = '/')
 sampDat$ID <- 1:nrow(sampDat)
 sampDat$Group <- factor(sampDat$Group, levels = c('Cat/Introvert', 'Cat/Extrovert', 'Dog/Introvert', 'Dog/Extrovert', 'None/Introvert', 'None/Extrovert'))
 
+plotDat <- as.data.frame(sampDat %>%
+  group_by(Group) %>%
+  summarise(meanSWB = mean(SWB)))
+
 ggplot(sampDat, aes(ID, SWB, color = Group)) + geom_point() +
   scale_color_manual(values = c('#40B6AD', baseColor, accent1, accent2, accent3, 'gray40')) +
-  scale_x_continuous(breaks = seq(1, 18, 1))
-
-basePlot <- ggplot(dat, aes(ID, DV)) + geom_point() +
-    labs(x = 'Participant', y = 'Dependent Variable') +
-  scale_x_continuous(breaks = seq(1, 12, 1)) + 
-    geom_hline(yintercept = mean(dat$DV), linewidth = 1) +
-    theme(axis.text = element_text(size = 8),
-          axis.title = element_text(size = 8, face = 'bold'))
-
-plotDat <- data.frame(y = c(mean(dat$DV[dat$IV=='Group A']), mean(dat$DV[dat$IV=='Group B']), mean(dat$DV[dat$IV=='Group C'])))
-
-basePlot + geom_point(data = dat, aes(color = IV)) +
-  scale_color_manual(values = c(baseColor, accent1, accent2)) +
-  geom_segment(aes(x = 1, y = plotDat$y[1], xend = 4, yend = plotDat$y[1]),
+  scale_x_continuous(breaks = seq(1, 18, 1)) +
+  geom_hline(yintercept = mean(sampDat$SWB), linewidth = 1) +
+  geom_segment(aes(x = 1, y = plotDat$meanSWB[1], xend = 3, yend = plotDat$meanSWB[1]),
+               col = '#40B6AD', linewidth = 1) + 
+  geom_segment(aes(x = 4, y = plotDat$meanSWB[2], xend = 6, yend = plotDat$meanSWB[2]),
                col = baseColor, linewidth = 1) +
-  geom_segment(aes(x = 5, y = plotDat$y[2], xend = 8, yend = plotDat$y[2]),
+  geom_segment(aes(x = 7, y = plotDat$meanSWB[3], xend = 9, yend = plotDat$meanSWB[3]),
                col = accent1, linewidth = 1) +
-  geom_segment(aes(x = 9, y = plotDat$y[3], xend = 12, yend = plotDat$y[3]),
+  geom_segment(aes(x = 10, y = plotDat$meanSWB[4], xend = 12, yend = plotDat$meanSWB[4]),
                col = accent2, linewidth = 1) +
-  geom_segment(aes(x = ID, y = mean(DV), xend = ID, yend = c(rep(plotDat$y[1], 4), rep(plotDat$y[2], 4), rep(plotDat$y[3], 4)), color = dat$IV), lty = 2, linewidth = 1) +
-  theme(legend.position = 'inside',
-        legend.position.inside = c(.85, .78),
-        legend.text = element_text(size = 8),
-        legend.title = element_blank())
+  geom_segment(aes(x = 13, y = plotDat$meanSWB[5], xend = 15, yend = plotDat$meanSWB[5]),
+               col = accent3, linewidth = 1) +
+  geom_segment(aes(x = 16, y = plotDat$meanSWB[6], xend = 18, yend = plotDat$meanSWB[6]),
+               col = 'gray40', linewidth = 1) +
+  geom_segment(x = sampDat$ID, y = mean(sampDat$SWB), xend = sampDat$ID, yend = sampDat$GroupMean, lty = 2, linewidth = 1) + 
+  theme(legend.position = 'top',
+        axis.title = element_text(face = 'bold'))
+
+
+sampDat %>%
+  group_by(Personality) %>%
+  summarise(meanSWB = mean(SWB))
 
 ```
 
 ]
+
+---
+### The Logic Behind Factorial ANOVA
+
++ $SS_{IV1}$: Main Effect of Pet
+
+```{r, echo = F, fig.height=4.5, warning = F}
+
+ggplot(sampDat, aes(ID, SWB, color = Pet)) + geom_point() +
+  scale_color_manual(values = c('#40B6AD', baseColor, accent1, accent2, accent3, 'gray40')) +
+  scale_x_continuous(breaks = seq(1, 18, 1)) +
+  geom_hline(yintercept = mean(sampDat$SWB), linewidth = 1) +
+  geom_segment(aes(x = 1, y = plotDat$meanSWB[1], xend = 3, yend = plotDat$meanSWB[1]),
+               col = '#40B6AD', linewidth = 1)
+  geom_segment(aes(x = 4, y = plotDat$meanSWB[2], xend = 6, yend = plotDat$meanSWB[2]),
+               col = baseColor, linewidth = 1) +
+  geom_segment(aes(x = 7, y = plotDat$meanSWB[3], xend = 9, yend = plotDat$meanSWB[3]),
+               col = accent1, linewidth = 1) 
+  geom_segment(x = sampDat$ID, y = mean(sampDat$SWB), xend = sampDat$ID, yend = sampDat$GroupMean, lty = 2, linewidth = 1) + 
+  theme(legend.position = 'top',
+        axis.title = element_text(face = 'bold'))
+
+```
+
 
 ---
 ### The $F$ distribution
